# amplifier-optimizer

./: .gitignore  LICENSE  README.md  bundle.md  pyproject.toml
context/: observability-instructions.md
modules/: __init__.py
modules/observability/: QUICKSTART.md  README.md  bundle.yaml
modules/observability/modules/: observability_hook.py  trajectory_analyzer.py
modules/observability/tests/: test_basic_import.py
tests/: test_basic_import.py
