[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-optimizer"
version = "1.0.0"
description = "Real-time cost, speed, and trajectory tracking for Amplifier sessions"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-observability = "modules.observability_hook:ObservabilityHook"
hooks-trajectory = "modules.trajectory_analyzer:TrajectoryAnalyzer"

[dependency-groups]
dev = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core@main",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["modules"]
